# mcplibrary

./: .env  .gitignore  CONTRIBUTING.md  README.md  convert_tree.py  exp.ipynb  pyproject.toml  requirements.txt  tasks.todo  test_api.py
src/: extract.py  link_fetcher.py
src/doc_fetcher/: __init__.py  server.py
src/lib/: README.md  __init__.py  fetcher.py  tree_builder.py
src/link_fetcher/: content_fetcher.py  fetcher.py  main.py  tree_builder.py
src/mcp_server/: server.py
src/mcp_server/cache/ai_pydantic_dev/: extracted_links.txt  fasthtml_doc.txt  tree_structure.json
src/mcp_server/cache/microsoft_github_io/: extracted_links.txt  fasthtml_doc.txt  tree_structure.json
src/mcp_server/tests/: __init__.py  test_server.py
