[project]
name = "docmap"
version = "0.1.0"
description = "A Python library for crawling documentation websites and creating tree structures for LLM context"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tqdm>=4.64.0",
    "google-genai>=1.5.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "treelib>=1.7.1",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.0.1",
    "trafilatura>=2.0.0",
    "ipykernel>=6.29.5",
    "aiohttp>=3.11.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
docmap = "docmap.map:main"
link-fetcher = "link_fetcher.main:main"
